Version 2.02.85 - 
===================================
  Use system page size and not hardcoded value in locking code check.
  Fix reading of released memory for printing segment type.
  Fix syslog initialisation in clvmd to respect lvm.conf setting.
  Fix possible overflow in maximum stripe size and physical extent size.
  Add test for failed allocation from dm_task_set_uuid() in dmeventd.
  Improve pvremove error message when PV belongs to a VG.
  Extend normal policy to allow mirror logs on same PVs as images if necessary.
  Improve cling policy to recognise PVs already used during the transaction.
  Improve normal allocation algorithm to include clinging to existing areas.
  Add allocation/maximise_cling & mirror_logs_require_separate_pvs to lvm.conf.
  Fix metadata balance code to work with recent changes in metadata handling.
  Add old_id field to physical_volume and fix pvchange -u for recent changes.
  Allow pvresize on a PV with two metadata areas.
  Change pvcreate to use new metadata handling interface.
  Restructure existing pv_setup and pv_write fn, add pv_initialise fn.
  Add internal interface to support adding and removing metadata areas.
  Allow internal indexing of metadata areas (PV id + mda order).
  Generalise internal format_instance infrastrusture for PV and VG use.
  Handle decimal digits with --units instead of ignoring them silently.
  Fix remaining warnings and compile with -Wpointer-arith.
  Fix gcc warnings for unused variables.
  Add stack backtraces for error paths in process_each_lv().
  Fixing some const cast gcc warnings in the code.
  Use char* arithmetic in _text_write(), _text_read() & send_message().
  Fix compilation when devmapper is dissabled.
  Remove fs_unlock() from lv_suspend error path.
  Change memory locking semantic and use critical sections.
  Add configurable pv_min_size to select block devices by its size.
  Add function to read 64bit ints from config find_config_tree_int64.